added accessability to about html

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
     <section class="handcraft">
         <div class="handcraft__wrapper wrap flex">
             <div class="container">
-                <h2 class="handcraft__title">HANDCRAFTED WITH THOUGHT IN NORWAY</h2>
-                <p class="handcraft__desc">
+                <h2 class="handcraft__title" tabindex="0">HANDCRAFTED WITH THOUGHT IN NORWAY</h2>
+                <p class="handcraft__desc" tabindex="0">
                     Faded short sleeves t-shirt with high neckline. Soft and stretchy material for a comfortable fit.
                     Accessorize with a straw hat and you're ready for summer! Faded short sleeves t-shirt with high
                     neckline. Soft and stretchy material for a comfortable fit. Accessorize with a straw hat and you're
@@ -102,9 +102,9 @@
     <section class="designers">
         <div class="container">
             <div class="designers__wrapper wrap flex">
-                <h2 class="designers__title">EXPERT DESIGNERS AND DEVELOPERS TRAINED IN CREATIVE AND DIGITAL INDUSTRY
+                <h2 class="designers__title" tabindex="0">EXPERT DESIGNERS AND DEVELOPERS TRAINED IN CREATIVE AND DIGITAL INDUSTRY
                 </h2>
-                <p class="designers__desc">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
+                <p class="designers__desc" tabindex="0">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
                     for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short sleeves
                     t-shirt with high neckline. Soft and stretchy material for a comfortable fit. Accessorize with a
                     straw hat and you're ready for summer!</p>
@@ -121,18 +121,18 @@
     </div>
     <section class="team">
         <div class="container">
-            <h2 class="team__title">MEET THE TEAM</h2>
+            <h2 class="team__title" tabindex="0">MEET THE TEAM</h2>
             <ul class="list-reset team__list grid">
                 <li class="team__item member flex">
                     <div>
                         <img src="assets/images/team-1.jpg" alt="Rainydays team member">
                     </div>
                     <div class="team__info">
-                        <h3 class="member__name">Andy Andy</h3>
-                    <p class="member__position">Designer</p>
+                        <h3 class="member__name" tabindex="0">Andy Andy</h3>
+                    <p class="member__position" tabindex="0">Designer</p>
                     <ul class="list-reset member__social-list flex">
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="facebook page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2185)">
@@ -152,7 +152,7 @@
                             </a>
                         </li>
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="linkedin page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2188)">
@@ -175,7 +175,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="member__desc">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
+                    <p class="member__desc" tabindex="0">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
                         for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short
                         sleeves t-shirt with high summer!</p>
                     </div>
@@ -185,11 +185,11 @@
                         <img src="assets/images/team-2.jpg" alt="Rainydays team member">
                     </div>
                     <div class="team__info">
-                        <h3 class="member__name">Joseph John</h3>
-                    <p class="member__position">Designer</p>
+                        <h3 class="member__name" tabindex="0">Joseph John</h3>
+                    <p class="member__position" tabindex="0">Designer</p>
                     <ul class="list-reset member__social-list flex">
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="facebook page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2185)">
@@ -209,7 +209,7 @@
                             </a>
                         </li>
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="linkedin page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2188)">
@@ -232,7 +232,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="member__desc">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
+                    <p class="member__desc" tabindex="0">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
                         for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short
                         sleeves t-shirt with high summer!</p>
                     </div>                    
@@ -242,11 +242,11 @@
                         <img src="assets/images/team-3.jpg" alt="Rainydays team member">
                     </div>
                     <div class="team__info">
-                        <h3 class="member__name">Julia Julia</h3>
-                    <p class="member__position">Designer</p>
+                        <h3 class="member__name" tabindex="0">Julia Julia</h3>
+                    <p class="member__position" tabindex="0">Designer</p>
                     <ul class="list-reset member__social-list flex">
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="facebook page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2185)">
@@ -266,7 +266,7 @@
                             </a>
                         </li>
                         <li class="member__sub-item">
-                            <a class="member__link" href="#">
+                            <a class="member__link" href="#" aria-label="linkedin page">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
                                     <g clip-path="url(#clip0_702_2188)">
@@ -289,7 +289,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="member__desc">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
+                    <p class="member__desc" tabindex="0">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
                         for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short
                         sleeves t-shirt with high summer!</p>
                     </div>
@@ -299,56 +299,57 @@
                         <img src="assets/images/team-4.jpg" alt="Rainydays team member">
                     </div>
                     <div class="team__info">
-                        <h3 class="member__name">Olav Olav</h3>
-                    <p class="member__position">Designer</p>
-                    <ul class="list-reset member__social-list flex">
-                        <li class="member__sub-item">
-                            <a class="member__link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                        <h3 class="member__name" tabindex="0">Olav Olav</h3>
+                        <p class="member__position" tabindex="0">Designer</p>
+                        <ul class="list-reset member__social-list flex">
+                            <li class="member__sub-item">
+                                <a class="member__link" href="#" aria-label="facebook page">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
-                                    <g clip-path="url(#clip0_702_2185)">
-                                        <path
-                                            d="M30 15C30 6.71578 23.2842 0 15 0C6.71578 0 0 6.71566 0 15C0 22.4869 5.48531 28.6925 12.6562 29.8178V19.3359H8.84766V15H12.6562V11.6953C12.6562 7.93594 14.8957 5.85938 18.3219 5.85938C19.9631 5.85938 21.6797 6.15234 21.6797 6.15234V9.84375H19.7883C17.9248 9.84375 17.3438 11 17.3438 12.1863V15H21.5039L20.8389 19.3359H17.3438V29.8178C24.5147 28.6925 30 22.487 30 15Z"
+                                        <g clip-path="url(#clip0_702_2185)">
+                                            <path
+                                                d="M30 15C30 6.71578 23.2842 0 15 0C6.71578 0 0 6.71566 0 15C0 22.4869 5.48531 28.6925 12.6562 29.8178V19.3359H8.84766V15H12.6562V11.6953C12.6562 7.93594 14.8957 5.85938 18.3219 5.85938C19.9631 5.85938 21.6797 6.15234 21.6797 6.15234V9.84375H19.7883C17.9248 9.84375 17.3438 11 17.3438 12.1863V15H21.5039L20.8389 19.3359H17.3438V29.8178C24.5147 28.6925 30 22.487 30 15Z"
                                             fill="#1877F2" />
-                                        <path
-                                            d="M20.8389 19.3359L21.5039 15H17.3438V12.1863C17.3438 10.9999 17.9249 9.84375 19.7883 9.84375H21.6797V6.15234C21.6797 6.15234 19.9631 5.85938 18.3219 5.85938C14.8957 5.85938 12.6562 7.93594 12.6562 11.6953V15H8.84766V19.3359H12.6562V29.8178C13.4316 29.9393 14.2152 30.0002 15 30C15.7848 30.0002 16.5684 29.9393 17.3438 29.8178V19.3359H20.8389Z"
+                                            <path
+                                                d="M20.8389 19.3359L21.5039 15H17.3438V12.1863C17.3438 10.9999 17.9249 9.84375 19.7883 9.84375H21.6797V6.15234C21.6797 6.15234 19.9631 5.85938 18.3219 5.85938C14.8957 5.85938 12.6562 7.93594 12.6562 11.6953V15H8.84766V19.3359H12.6562V29.8178C13.4316 29.9393 14.2152 30.0002 15 30C15.7848 30.0002 16.5684 29.9393 17.3438 29.8178V19.3359H20.8389Z"
                                             fill="white" />
-                                    </g>
-                                    <defs>
-                                        <clippath>
-                                            <rect width="30" height="30" fill="white" />
-                                        </clippath>
-                                    </defs>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="member__sub-item">
-                            <a class="member__link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
-                                    fill="none">
-                                    <g clip-path="url(#clip0_702_2188)">
-                                        <path
-                                            d="M22.9688 0H7.03125C3.148 0 0 3.148 0 7.03125V22.9688C0 26.852 3.148 30 7.03125 30H22.9688C26.852 30 30 26.852 30 22.9688V7.03125C30 3.148 26.852 0 22.9688 0Z"
-                                            fill="white" />
-                                        <path
-                                            d="M22.9688 0H7.03125C3.148 0 0 3.148 0 7.03125V22.9688C0 26.852 3.148 30 7.03125 30H22.9688C26.852 30 30 26.852 30 22.9688V7.03125C30 3.148 26.852 0 22.9688 0Z"
-                                            fill="#0A66C2" />
-                                        <path
-                                            d="M21.6463 25.51H25.0764C25.2007 25.51 25.3199 25.4606 25.4078 25.3727C25.4957 25.2848 25.5451 25.1656 25.5451 25.0413L25.5469 17.7942C25.5469 14.0064 24.7307 11.0948 20.3041 11.0948C18.6214 11.0323 17.0346 11.8997 16.1783 13.3481C16.1741 13.3552 16.1678 13.3606 16.1602 13.3637C16.1526 13.3668 16.1442 13.3673 16.1363 13.3651C16.1284 13.363 16.1214 13.3583 16.1164 13.3519C16.1114 13.3454 16.1087 13.3374 16.1086 13.3293V11.9133C16.1086 11.789 16.0592 11.6697 15.9713 11.5818C15.8834 11.4939 15.7642 11.4445 15.6398 11.4445H12.3847C12.2604 11.4445 12.1412 11.4939 12.0533 11.5818C11.9654 11.6697 11.916 11.789 11.916 11.9133V25.0406C11.916 25.1649 11.9654 25.2842 12.0533 25.3721C12.1412 25.46 12.2604 25.5094 12.3847 25.5094H15.8146C15.9389 25.5094 16.0581 25.46 16.146 25.3721C16.2339 25.2842 16.2833 25.1649 16.2833 25.0406V18.5516C16.2833 16.7168 16.6314 14.9399 18.9061 14.9399C21.1485 14.9399 21.1775 17.0394 21.1775 18.6704V25.0412C21.1775 25.1655 21.2269 25.2848 21.3148 25.3727C21.4027 25.4606 21.522 25.51 21.6463 25.51ZM4.45312 6.98754C4.45312 8.37797 5.5977 9.52195 6.98813 9.52195C8.3782 9.52184 9.52207 8.37715 9.52207 6.98707C9.52184 5.59699 8.37785 4.45312 6.98766 4.45312C5.59711 4.45312 4.45312 5.59723 4.45312 6.98754ZM5.26863 25.51H8.70305C8.82737 25.51 8.9466 25.4606 9.0345 25.3727C9.12241 25.2848 9.1718 25.1655 9.1718 25.0412V11.9133C9.1718 11.789 9.12241 11.6697 9.0345 11.5818C8.9466 11.4939 8.82737 11.4445 8.70305 11.4445H5.26863C5.14431 11.4445 5.02508 11.4939 4.93718 11.5818C4.84927 11.6697 4.79988 11.789 4.79988 11.9133V25.0412C4.79988 25.1655 4.84927 25.2848 4.93718 25.3727C5.02508 25.4606 5.14431 25.51 5.26863 25.51Z"
-                                            fill="white" />
-                                    </g>
-                                    <defs>
-                                        <clippath>
-                                            <rect width="30" height="30" fill="white" />
-                                        </clippath>
-                                    </defs>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="member__desc">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
-                        for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short
-                        sleeves t-shirt with high summer!</p>
+                                        </g>
+                                        <defs>
+                                            <clippath>
+                                                <rect width="30" height="30" fill="white" />
+                                            </clippath>
+                                        </defs>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="member__sub-item">
+                                <a class="member__link" href="#" aria-label="linkedin page">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                        fill="none">
+                                        <g clip-path="url(#clip0_702_2188)">
+                                            <path
+                                                d="M22.9688 0H7.03125C3.148 0 0 3.148 0 7.03125V22.9688C0 26.852 3.148 30 7.03125 30H22.9688C26.852 30 30 26.852 30 22.9688V7.03125C30 3.148 26.852 0 22.9688 0Z"
+                                                fill="white" />
+                                            <path
+                                                d="M22.9688 0H7.03125C3.148 0 0 3.148 0 7.03125V22.9688C0 26.852 3.148 30 7.03125 30H22.9688C26.852 30 30 26.852 30 22.9688V7.03125C30 3.148 26.852 0 22.9688 0Z"
+                                                fill="#0A66C2" />
+                                            <path
+                                                d="M21.6463 25.51H25.0764C25.2007 25.51 25.3199 25.4606 25.4078 25.3727C25.4957 25.2848 25.5451 25.1656 25.5451 25.0413L25.5469 17.7942C25.5469 14.0064 24.7307 11.0948 20.3041 11.0948C18.6214 11.0323 17.0346 11.8997 16.1783 13.3481C16.1741 13.3552 16.1678 13.3606 16.1602 13.3637C16.1526 13.3668 16.1442 13.3673 16.1363 13.3651C16.1284 13.363 16.1214 13.3583 16.1164 13.3519C16.1114 13.3454 16.1087 13.3374 16.1086 13.3293V11.9133C16.1086 11.789 16.0592 11.6697 15.9713 11.5818C15.8834 11.4939 15.7642 11.4445 15.6398 11.4445H12.3847C12.2604 11.4445 12.1412 11.4939 12.0533 11.5818C11.9654 11.6697 11.916 11.789 11.916 11.9133V25.0406C11.916 25.1649 11.9654 25.2842 12.0533 25.3721C12.1412 25.46 12.2604 25.5094 12.3847 25.5094H15.8146C15.9389 25.5094 16.0581 25.46 16.146 25.3721C16.2339 25.2842 16.2833 25.1649 16.2833 25.0406V18.5516C16.2833 16.7168 16.6314 14.9399 18.9061 14.9399C21.1485 14.9399 21.1775 17.0394 21.1775 18.6704V25.0412C21.1775 25.1655 21.2269 25.2848 21.3148 25.3727C21.4027 25.4606 21.522 25.51 21.6463 25.51ZM4.45312 6.98754C4.45312 8.37797 5.5977 9.52195 6.98813 9.52195C8.3782 9.52184 9.52207 8.37715 9.52207 6.98707C9.52184 5.59699 8.37785 4.45312 6.98766 4.45312C5.59711 4.45312 4.45312 5.59723 4.45312 6.98754ZM5.26863 25.51H8.70305C8.82737 25.51 8.9466 25.4606 9.0345 25.3727C9.12241 25.2848 9.1718 25.1655 9.1718 25.0412V11.9133C9.1718 11.789 9.12241 11.6697 9.0345 11.5818C8.9466 11.4939 8.82737 11.4445 8.70305 11.4445H5.26863C5.14431 11.4445 5.02508 11.4939 4.93718 11.5818C4.84927 11.6697 4.79988 11.789 4.79988 11.9133V25.0412C4.79988 25.1655 4.84927 25.2848 4.93718 25.3727C5.02508 25.4606 5.14431 25.51 5.26863 25.51Z"
+                                                fill="white" />
+                                        </g>
+                                        <defs>
+                                            <clippath>
+                                                <rect width="30" height="30" fill="white" />
+                                            </clippath>
+                                        </defs>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="member__desc" tabindex="0">Faded short sleeves t-shirt with high neckline. Soft and stretchy material
+                            for a comfortable fit. Accessorize with a straw hat and you're ready for summer! Faded short
+                            sleeves t-shirt with high summer!
+                        </p>
                     </div>
                 </li>
             </ul>
