added accessability to list html

--- a/jacket.html
+++ b/jacket.html
@@ -90,7 +90,7 @@
         <div class="top-jp grid">
             <div class="top__item-1">
                 <div class="item__header">
-                    <h2 tabindex="1">NEW PRODUCTS</h2>
+                    <h2>NEW PRODUCTS</h2>
                 </div>
                 <div class="content-wrapper">
                     <ul class="product__list list-reset">
@@ -111,7 +111,7 @@
                             <p class="product__desc">Product name <br>120.00$</p>
                         </li>
                     </ul>
-                    <a class="new-products" href="#" tabindex="1">All new products</a>
+                    <a class="new-products" href="#" tabindex="-1">All new products</a>
                 </div>
             </div>
             <div class="top__item-2">
@@ -277,8 +277,8 @@
         <div class="midd-jp grid">
             <div class="midd__item-1">
                 <div class="decor">
-                    <h3 class="item-1__title" tabindex="1">Trendy Collection</h3>
-                    <a href="#" class="btn-reset shop-now-btn" tabindex="1">
+                    <h3 class="item-1__title">Trendy Collection</h3>
+                    <a href="#" class="btn-reset shop-now-btn" tabindex="-1">
                         SHOP NOW
                     </a>
                 </div>
@@ -380,7 +380,7 @@
         <div class="bott-jp grid">
             <div class="bott__item-1">
                 <div class="item__header">
-                    <h2 tabindex="1">BEST SELLERS</h2>
+                    <h2>BEST SELLERS</h2>
                 </div>
                 <div class="content-wrapper">
                     <ul class="product__list list-reset">
@@ -401,7 +401,7 @@
                             <p class="product__desc">Product name <br>120.00$</p>
                         </li>
                     </ul>
-                    <a class="new-products" href="#" tabindex="1">All new products</a>
+                    <a class="new-products" href="#" tabindex="-1">All new products</a>
                 </div>
             </div>
             <div class="bott__item-2 flex">
